# bcp-prototype

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/game-client/: CMakeLists.txt  UserClient.hpp  main.cpp  service_manager.hpp
apps/game-server/: CMakeLists.txt  main.cpp  service_manager.cpp
libraries/: CMakeLists.txt
libraries/bryllite/: CMakeLists.txt  common.cpp  common.hpp  exceptions.hpp  lockable.hpp  log.cpp  log.hpp  singleton.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp  version.hpp  version.hpp.in
libraries/bryllite/compat/: time.cpp  time.hpp
test/: CMakeLists.txt  test1.cpp  test2.cpp
